<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".View.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logo"
        style="@style/Logo"
        android:contentDescription="@string/txt_description_image"
        android:src="@mipmap/ic_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title"
        style="@style/Title"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_login_email"
        style="@style/TextBox"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/hint_username"
        app:layout_constraintBottom_toTopOf="@+id/input_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_login_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:maxLines="1"
            android:textColorHint="#546E7A"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_login_password"
        style="@style/TextBox"
        android:layout_margin="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_login_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_login_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="textPassword|textNoSuggestions"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Button"
        android:layout_marginTop="8dp"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_login_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_user"
        style="@style/Button"
        android:onClick="openRegisterUserPage"
        android:text="@string/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>