<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.RegisterUserActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_logo"
        style="@style/Logo"
        android:contentDescription="@string/txt_description_image"
        android:src="@mipmap/ic_icon_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_title"
        style="@style/Title"
        android:layout_marginTop="16dp"
        android:text="@string/register_username_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_register_email"
        style="@style/TextBox"
        android:layout_margin="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/hint_register_email"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_register_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_register_password"
        style="@style/TextBox"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/hint_register_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_register_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_register_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:inputType="textPassword|textNoSuggestions"
            android:maxLines="1"
            android:textColorHint="#000000" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- ========= BUTTON ========= -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_user"
        style="@style/Button"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_register_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>